# pooled

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebook/: pooled_implementation-Ebert-Official.ipynb
pooled/: __init__.py  cli.py
src/pooled/: pooled.py
src/pooled.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_pooled.py
